<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Subject Name"
        android:id="@+id/subjectName"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@color/appThemeColor"
        android:paddingLeft="@dimen/colorStripWidth"
        android:textColor="#000" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/subjectName"
        android:weightSum="10">

        <View
            android:id="@+id/subjectColor"
            android:layout_width="@dimen/colorStripWidth"
            android:layout_height="match_parent"
            android:background="@color/appThemeColor" />
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/professorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Professor: Mr ABC"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/lorem_ipsum"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/bunkedClasses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/bunkedClasses"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/attendancePercentage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/attendancePercentage"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>


        <View
            android:id="@+id/subjectColor2"
            android:layout_width="@dimen/colorStripWidth"
            android:layout_height="match_parent"
            android:background="@color/appThemeColor"
            android:visibility="gone" />


    </LinearLayout>
</RelativeLayout>