<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeScreen"
    android:id="@+id/sl"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll"
        android:weightSum="3">


        <RelativeLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:background="@color/appThemeColor">

            <com.jazzyarchitects.studentassistant.CustomViews.RoundedImageView
                android:id="@+id/userPic"
                android:layout_width="@dimen/homeScreenUserPicSize"
                android:layout_height="@dimen/homeScreenUserPicSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/nodp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/userPic"
                android:layout_toRightOf="@+id/userPic"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/hiUserText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hiUserText"
                    android:textColor="@color/homeScreenTopTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quoteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/quoteText"
                    android:textColor="@color/homeScreenTopTextColor"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/sunny"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFF00"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="Sunny Day\n27°C"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:animateLayoutChanges="true"
            android:weightSum="8">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/todayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todayText"
                    android:textColor="@color/appThemeColor"
                    android:textSize="19sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/subjectCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/todayText"
                    android:paddingTop="3dp"
                    android:text="@string/subjectCount"
                    android:textColor="#000"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/assignmentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subjectCount"
                    android:paddingTop="3dp"
                    android:text="@string/assignmentCount"
                    android:textColor="#000"
                    android:textSize="16sp" />


                <com.jazzyarchitects.studentassistant.CustomViews.AlarmView
                    android:id="@+id/alarmClock"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="2"
                android:background="@color/background1"
                android:id="@+id/topDetails">

                <include
                    layout="@layout/subject_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/firstHalfClasses"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="Maths"
                    app:time="8:00-8:50" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background2"
                    app:subject="Digital"
                    app:time="8:50-9:40" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="Analog"
                    app:time="9:40-10:30" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background2"
                    app:subject="-"
                    app:time="10:30-11:20" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="English"
                    app:time="11:20-12:10" />
            </RadioGroup>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:id="@+id/bottomDetails"
                android:layout_weight="2">

                <include
                    layout="@layout/subject_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>


            <RadioGroup
                android:id="@+id/secondHalfClasses"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="25dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="Lab"
                    app:time="13:30-14:20" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background2"
                    app:subject="Lab"
                    app:time="14:20-15:10" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="Lab"
                    app:time="15:10-16:00" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background2"
                    app:subject="-"
                    app:time="16:00-16:50" />

                <com.jazzyarchitects.studentassistant.CustomViews.ClassSchedule
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background1"
                    app:subject="-"
                    app:time="16:50-17:40" />
            </RadioGroup>


        </LinearLayout>

    </LinearLayout>

</ScrollView>